ChessV.Compiler/ChessVCParser.cs

/***************************************************************************

                                 ChessV

                  COPYRIGHT (C) 2012-2017 BY GREG STRONG

This file is part of ChessV.  ChessV is free software; you can redistribute
it and/or modify it under the terms of the GNU General Public License as 
published by the Free Software Foundation, either version 3 of the License, 
or (at your option) any later version.

ChessV is distributed in the hope that it will be useful, but WITHOUT ANY 
WARRANTY; without even the implied warranty of MERCHANTABILITY or 
FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for 
more details; the file 'COPYING' contains the License text, but if for
some reason you need a copy, please visit <http://www.gnu.org/licenses/>.

****************************************************************************/

//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\greg\workspace\ChessVCParser\ChessVC.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class ChessVCParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, IDENTIFIER=37, STRING=38, 
		INTEGER=39, LINE_COMMENT=40, COMMENT=41, WHITESPACE=42;
	public const int
		RULE_chunk = 0, RULE_unit = 1, RULE_declaration = 2, RULE_pieceTypeDeclaration = 3, 
		RULE_gameDeclaration = 4, RULE_declMember = 5, RULE_functionDefn = 6, 
		RULE_memberDefn = 7, RULE_statement = 8, RULE_block = 9, RULE_assignment = 10, 
		RULE_functionCall = 11, RULE_argumentList = 12, RULE_expr = 13, RULE_objectid = 14, 
		RULE_constant = 15;
	public static readonly string[] ruleNames = {
		"chunk", "unit", "declaration", "pieceTypeDeclaration", "gameDeclaration", 
		"declMember", "functionDefn", "memberDefn", "statement", "block", "assignment", 
		"functionCall", "argumentList", "expr", "objectid", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'PieceType'", "'{'", "'}'", "'Game'", "':'", "';'", "'if'", "'('", 
		"')'", "'else'", "'='", "','", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", 
		"'<<'", "'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&'", "'^'", 
		"'|'", "'&&'", "'||'", "'.'", "'..'", "'true'", "'false'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "IDENTIFIER", "STRING", "INTEGER", "LINE_COMMENT", "COMMENT", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ChessVC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ChessVCParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ChunkContext : ParserRuleContext {
		public UnitContext unit() {
			return GetRuleContext<UnitContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ChessVCParser.Eof, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitChunk(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(Context, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32; unit();
			State = 33; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnitContext : ParserRuleContext {
		public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public UnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnitContext unit() {
		UnitContext _localctx = new UnitContext(Context, State);
		EnterRule(_localctx, 2, RULE_unit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__0 || _la==T__3) {
				{
				{
				State = 35; declaration();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
	 
		public DeclarationContext() { }
		public virtual void CopyFrom(DeclarationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PieceTypeDeclContext : DeclarationContext {
		public PieceTypeDeclarationContext pieceTypeDeclaration() {
			return GetRuleContext<PieceTypeDeclarationContext>(0);
		}
		public PieceTypeDeclContext(DeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterPieceTypeDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitPieceTypeDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPieceTypeDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class GameDeclContext : DeclarationContext {
		public GameDeclarationContext gameDeclaration() {
			return GetRuleContext<GameDeclarationContext>(0);
		}
		public GameDeclContext(DeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterGameDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitGameDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_declaration);
		try {
			State = 43;
			switch (TokenStream.La(1)) {
			case T__0:
				_localctx = new PieceTypeDeclContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 41; pieceTypeDeclaration();
				}
				break;
			case T__3:
				_localctx = new GameDeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 42; gameDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PieceTypeDeclarationContext : ParserRuleContext {
		public ObjectidContext objectid() {
			return GetRuleContext<ObjectidContext>(0);
		}
		public DeclMemberContext[] declMember() {
			return GetRuleContexts<DeclMemberContext>();
		}
		public DeclMemberContext declMember(int i) {
			return GetRuleContext<DeclMemberContext>(i);
		}
		public PieceTypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pieceTypeDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterPieceTypeDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitPieceTypeDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPieceTypeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PieceTypeDeclarationContext pieceTypeDeclaration() {
		PieceTypeDeclarationContext _localctx = new PieceTypeDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_pieceTypeDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; Match(T__0);
			State = 46; objectid();
			State = 47; Match(T__1);
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 48; declMember();
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 54; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameDeclarationContext : ParserRuleContext {
		public ObjectidContext[] objectid() {
			return GetRuleContexts<ObjectidContext>();
		}
		public ObjectidContext objectid(int i) {
			return GetRuleContext<ObjectidContext>(i);
		}
		public DeclMemberContext[] declMember() {
			return GetRuleContexts<DeclMemberContext>();
		}
		public DeclMemberContext declMember(int i) {
			return GetRuleContext<DeclMemberContext>(i);
		}
		public GameDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterGameDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitGameDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GameDeclarationContext gameDeclaration() {
		GameDeclarationContext _localctx = new GameDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_gameDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(T__3);
			State = 57; objectid();
			State = 58; Match(T__4);
			State = 59; objectid();
			State = 60; Match(T__1);
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 61; declMember();
				}
				}
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 67; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclMemberContext : ParserRuleContext {
		public DeclMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declMember; } }
	 
		public DeclMemberContext() { }
		public virtual void CopyFrom(DeclMemberContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FnDefinitionContext : DeclMemberContext {
		public FunctionDefnContext functionDefn() {
			return GetRuleContext<FunctionDefnContext>(0);
		}
		public FnDefinitionContext(DeclMemberContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterFnDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitFnDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFnDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MemberAssignContext : DeclMemberContext {
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public MemberAssignContext(DeclMemberContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterMemberAssign(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitMemberAssign(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMemberAssign(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MemberDefinitionContext : DeclMemberContext {
		public MemberDefnContext memberDefn() {
			return GetRuleContext<MemberDefnContext>(0);
		}
		public MemberDefinitionContext(DeclMemberContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterMemberDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitMemberDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMemberDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclMemberContext declMember() {
		DeclMemberContext _localctx = new DeclMemberContext(Context, State);
		EnterRule(_localctx, 10, RULE_declMember);
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new MemberAssignContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 69; assignment();
				}
				break;
			case 2:
				_localctx = new FnDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 70; functionDefn();
				}
				break;
			case 3:
				_localctx = new MemberDefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 71; memberDefn();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDefnContext : ParserRuleContext {
		public ObjectidContext objectid() {
			return GetRuleContext<ObjectidContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FunctionDefnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDefn; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterFunctionDefn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitFunctionDefn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDefn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDefnContext functionDefn() {
		FunctionDefnContext _localctx = new FunctionDefnContext(Context, State);
		EnterRule(_localctx, 12, RULE_functionDefn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; objectid();
			State = 75; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemberDefnContext : ParserRuleContext {
		public ObjectidContext[] objectid() {
			return GetRuleContexts<ObjectidContext>();
		}
		public ObjectidContext objectid(int i) {
			return GetRuleContext<ObjectidContext>(i);
		}
		public MemberDefnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memberDefn; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterMemberDefn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitMemberDefn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMemberDefn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MemberDefnContext memberDefn() {
		MemberDefnContext _localctx = new MemberDefnContext(Context, State);
		EnterRule(_localctx, 14, RULE_memberDefn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; objectid();
			State = 78; objectid();
			State = 79; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class IfStatementContext : StatementContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public IfStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BlockStatementContext : StatementContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public BlockStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterBlockStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitBlockStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignStatementContext : StatementContext {
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public AssignStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterAssignStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitAssignStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FnCallStatementContext : StatementContext {
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public FnCallStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterFnCallStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitFnCallStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFnCallStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 16, RULE_statement);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				_localctx = new BlockStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 81; block();
				}
				break;
			case 2:
				_localctx = new IfStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; Match(T__6);
				State = 83; Match(T__7);
				State = 84; expr(0);
				State = 85; Match(T__8);
				State = 86; statement();
				State = 89;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
				case 1:
					{
					State = 87; Match(T__9);
					State = 88; statement();
					}
					break;
				}
				}
				break;
			case 3:
				_localctx = new AssignStatementContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 91; assignment();
				}
				break;
			case 4:
				_localctx = new FnCallStatementContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 92; functionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IChessVCVisitor<TResult> typedVisitor = visitor as IChessVCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 18, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(T__1);
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__6) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 96; statement();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 102; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
